kustomize/overlays/production/customer/pixta-downloader/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixta-downloader-svc
spec:
  selector:
    app: pixta-downloader
    stage: production
